--- a/index.html
+++ b/index.html
@@ -1,46 +1,123 @@
-<!doctype html>
-
-<html>
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <title>HTML Example</title>
-  
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/about.css">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>mt coding</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="Description" lang="en" content="open source x/html and css templates">
+<meta name="author" content="mlp design">
+<meta name="robots" content="index, follow">
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="center">
-    <aside class="sidebar"></aside>
-    
-    <section class="contents">
-      <!-- page will be include here -->
-      <section id="page" class="page">
-        <section id="about">
-          <section class="frame">
-            <h2><b>HELLO</b>WORLD</h2>
-            
-            <div class="cat">
-              <div class="picture">
-                <img src="images/mew.png" alt="Mew">
-              </div>
-              <small>Mew</small>
-            </div>
-            <div class="cat">
-              <div class="picture">
-                <img src="images/siesta.png" alt="Siesta">
-              </div>
-              <small>Siesta</small>
-            </div>
-            <div class="cat">
-              <div class="picture">
-                <img src="images/tiger.png" alt="Tiger">
-              </div>
-              <small>Tiger</small>
-            </div>
-          </section>
-        </section>
-      </section>
-    </section>
-  </section>
+<!--start wrapper-->
+<div id="wrapper">
+
+<!--start body-->
+<div id="body">
+
+<!--start header-->
+<div id="banner">
+<h1>gameworld<em>TV</em> 게임세상</h1>
+<p>나는 구독자 91명의 10대따 I'm a teenager with 91 subscribers</p>
+<!-- menu -->
+<label for="show-menu" class="responsive">&#9776;</label>
+<input type="checkbox" id="show-menu" role="button">
+<ul id="topnav">
+<li><a class="active">Home</a></li>
+<li><a href="#">Page 2</a></li>
+<li><a href="#">Page 3</a></li>
+<li><a href="#">Page 4</a></li>
+<li><a href="#">Page 5</a></li>
+</ul>
+<!-- end menu -->
+</div>
+<!--end of header-->
+	<!--start sidebar-->
+	<div id="sidebar">
+		<h2>About</h2>
+		<p>This template, updated after almost 9 years since the original release in 2008, is released under the <a href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution Non-Commercial License</a>. If you use it, you must retain the "Template Design by MLP Design" tag and link in place. You MAY NOT use the templates in adult or adult-oriented websites!</p>
+		<p>If you wish to use a template for commercial purposes or wish to remove the credit tag and link, please contact us.</p>
+		<h2>Categories</h2>
+		<ul>
+			<li><a href="#">Suspendisse potenti</a></li>
+			<li><a href="#">Proin sed pede</a></li>
+   			<li><a href="#">Maecenas ac nisi</a></li>
+   			<li><a href="#">Curabitur eget enim id</a></li>
+   			<li><a href="#">Nunc metus nisl dapibus</a></li>
+   			<li><a href="#">Fusce pellentesque odio sed</a></li>
+		</ul>
+		<h2>Archives</h2>
+		<ul>
+			<li><a href="#">2017-Sep</a></li>
+			<li><a href="#">2017-Aug</a></li>
+			<li><a href="#">2017-Jul</a></li>
+			<li><a href="#">2017-Jun</a></li>
+			<li><a href="#">2017-May</a></li>
+
+		</ul>
+		<h2>Links</h2>
+		<ul>
+			<li><a href="http://twitter.com/mlpdesign">Follow me on Twitter</a></li>
+			<li><a href="http://www.mlpdesign.net">MLP Design</a></li>
+		</ul>		
+	</div>
+	<div class="clear"></div>
+	<!--end of sidebar-->
+
+	<!--start containter-->
+	<div id="container">
+			
+		<!--start content-->
+		<div id="content">
+			<!--post item-->
+			<div class="item">
+				<h1>안녕 얘들아 나는 게임세상이야</h1>
+			      </P>Hello guys, I'm in the game world.</P>
+				<ul>
+					<li>계정은 2021년부터,처음의 이름은 현대TV였어</li>
+					<li>2023 8월https://lrl.kr/v6C7에 들어가봐 이 쇼츠로 내 구독자가 올라갔어.</li>
+					<li>https://lrl.kr/nIlX도 내 구독자 올라간 2분의1이야ㅑㅑㅑ</li>
+					<li>https://lrl.kr/jwcW는 https://lrl.kr/fj3V의 루나 스튜던트가 만들어줌</li>
+				</ul>
+				<span>17 March 2017 @ 1:28 PM | <a href="#">0 Comment(s)</a> | Posted by <a href="#">webmasterneo</a></span>
+			</div>
+			<!--another post item-->
+			<div class="item">
+				<h1>Space fillers</h1>
+				<p>Donec non dui. Morbi fringilla imperdiet lorem. Fusce risus diam, rutrum eu, hendrerit et, accumsan non, neque. Fusce vitae pede ut massa sodales mattis. Nulla sed justo. Integer nec sem vel tellus tempor gravida. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nunc faucibus. Nullam nulla ipsum, accumsan sed, tempus sed, adipiscing a, metus. Curabitur varius commodo eros.</p>
+				<span>17 March 2017 @ 6:24 PM | <a href="#">0 Comment(s)</a> | Posted by <a href="#">webmasterneo</a></span>
+			</div>
+			<!--end of another post item-->			
+		</div>
+		<!--end of content-->
+
+	</div>
+	<!--end of container-->
+
+</div>
+<!--end of body-->
+
+	<!--start footer-->
+	<div id="footer">
+		<span class="left">2017 &copy; Copyright <a href="#">Your Name</a>. All rights reserved.</span>
+		<span class="right"><a href="#">Contact</a> | <a href="#">Site Map</a></span>
+		<p class="show-footer">2017 &copy; Copyright <a href="#">Your Name</a>. All rights reserved.<br /><a href="#">Contact</a> | <a href="#">Site Map</a></p>
+	</div>
+	<!--end of footer-->	
+
+</div>
+<!--end of wrapper-->
+
+	<!--start credits-->
+	<!--//Under CC-NC 3.0, this portion must be left intact and must not be hidden.//-->
+	<div id="credits">
+	<span><a href="http://www.mlpdesign.net" title="CSS &amp; HTML by MLP Design.net">CSS &amp; HTML</a> by MLP Design<br />Licensed under <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0</a>.</span>
+	</div>
+	<!--end of credits-->
+	
 </body>
+
 </html>
+
